# PCB

./: .gitignore  CMakeLists.txt  readme.md
example/: ins.txt  ins1.txt  ins2.txt  ins3.txt
source/: main.cpp
source/Model/: ModelPCBList.cpp  ModelPCBList.h  PCBListModel.cpp  PCBListModel.h
source/Scheduler/: Instruction.h  PCB.cpp  PCB.h  Scheduler.cpp  Scheduler.h  Simulator.cpp  Simulator.h
source/Simulator/: Simulator.cpp  Simulator.h
source/qml/: XGroupBox.qml  main.qml  qml.qrc
